--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 * text=auto eol=crlf
-tests/ export-ignore
-phpunit.xml.dist export-ignore
-.editorconfig export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
+/tests/             export-ignore
+/phpunit.xml.dist   export-ignore
+/.editorconfig      export-ignore
+/.gitattributes     export-ignore
+/.gitignore         export-ignore
