--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,10 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.3"
+        "php": "^8.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~8.0|~9.0"
+        "phpunit/phpunit": "^12",
+        "phpunit/php-code-coverage": "^12.1"
     }
 }
